--- a/app/src/main/res/layout/employee_row.xml
+++ b/app/src/main/res/layout/employee_row.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <variable
+            name="employee"
+            type="com.example.a3amil.model.EmployeeModel" />
+        <variable
+            name="viewmodel"
+            type="com.example.a3amil.viewModel.EmployeeViewModel" />
+
+    </data>
+
     <androidx.cardview.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/cardView"
         android:padding="8dp"
         android:paddingStart="8dp"
@@ -21,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/spacing_large"
-            android:text="@string/empName"
+            android:text="@{employee.empName}"
             android:padding="18dp"
             android:paddingLeft="4dp"
             android:gravity="right"
@@ -29,16 +40,17 @@
             android:textColor="#000000"
             android:textSize="24sp" />
 
-    <TextView
-        android:id="@+id/empNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:layout_margin="18dp"
-        android:autoLink="phone"
-        android:padding="18dp"
-        android:paddingTop="8dp"
-        android:text="@string/empNum"
-        android:textColor="#000000"
-        android:textSize="24sp" />
-</androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/empNumber"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_margin="18dp"
+            android:autoLink="phone"
+            android:padding="18dp"
+            android:paddingTop="8dp"
+            android:text="@{employee.empNum}"
+            android:textColor="#000000"
+            android:textSize="24sp" />
+    </androidx.cardview.widget.CardView>
+</layout>
